changed User table to 1NF with userRoles